--- a/options.html
+++ b/options.html
@@ -59,6 +59,7 @@
     <label>Name: <input id="name" type="text"></label>
     <label>Email: <input id="email" type="email"></label>
     <label>Phone: <input id="phone" type="tel"></label>
+    <label>Location: <input id="location" type="location"></label>
     <label>LinkedIn: <input id="linkedin" type="text"></label>
     <label>Portfolio: <input id="portfolio" type="text"></label>
 
