--- a/popup.html
+++ b/popup.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h3>Copy Your Info</h3>
+    <h3>Profile</h3>
     <div class="info-row">
         <span>Name:</span>
         <span id="nameCopy"></span>
@@ -50,6 +50,11 @@
     <div class="info-row">
         <span>Phone:</span>
         <span id="phoneCopy"></span>
+        <button class="copy-btn">📋</button>
+    </div>
+    <div class="info-row">
+        <span>Location:</span>
+        <span id="locationCopy"></span>
         <button class="copy-btn">📋</button>
     </div>
     <div class="info-row">
@@ -70,6 +75,10 @@
     <hr>
     <h3>Experience</h3>
     <div id="experienceList"></div>
+    <script src="popup.js"></script>
+    <hr>
+    <h3>Education</h3>
+    <div id="educationList"></div>
     <script src="popup.js"></script>
 </body>
 </html>
